add files 1 and 2 to semantic html dir

--- a/0x00-semantic_html/0-index.html
+++ b/0x00-semantic_html/0-index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE>
+<!doctype html>
 <html>
-  <head>
-    
-  </head>
+  <head> </head>
 
   <body>
-   <header>
+    <header>
       <nav>
         <a href="">Home</a>
         <a href="">About</a>
@@ -16,9 +14,7 @@
     <main>
       <article>
         <h1></h1>
-        <section>
-
-        </section>
+        <section></section>
       </article>
     </main>
     <footer>
