--- a/0x00-semantic_html/1-index.html
+++ b/0x00-semantic_html/1-index.html
@@ -1,17 +1,20 @@
-<!DOCTYPE>
+<!doctype html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="A blog post about semantic HTML and accessibility practices">
-    <meta name="keywords" content="HTML, Semantic, Accessibility, Blog, SEO">
-    <meta name="author" content="Joseph Ochego">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="A blog post about semantic HTML and accessibility practices"
+    />
+    <meta name="keywords" content="HTML, Semantic, Accessibility, Blog, SEO" />
+    <meta name="author" content="Joseph Ochego" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Semantic Html Blog Post</title>
   </head>
 
   <body>
-   <header>
+    <header>
       <nav>
         <a href="">Home</a>
         <a href="">About</a>
@@ -19,14 +22,10 @@
       </nav>
     </header>
 
-  
-
     <main>
       <article>
         <h1></h1>
-        <section>
-
-        </section>
+        <section></section>
       </article>
     </main>
     <footer>
