--- a/0x00-semantic_html/2-index.html
+++ b/0x00-semantic_html/2-index.html
@@ -31,6 +31,29 @@
          <h3>Introduction</h3>
          <p>Semantic HTML helps improve the accessibility and SEO of your website. In this post, we’ll explore its benefits and how to implement it.:</p>
        </section>
+       <section>
+         <h3>Main Content</h3>
+         <p>
+           ### Using elements like
+
+         <code>&lt;article&gt;</code>
+         <code>&lt;section&gt;</code>
+         <code>&lt;header&gt;</code>
+         ensures that both users and search engines can better understand the structure and content of a webpage.</p>
+
+         <figure>
+           <img src="" alt="example">
+           <figcaption>An illustration of Semantic HTML elements</figcaption>
+         </figure>
+       </section>
+       <section>
+         <h3>Conclusion</h3>
+         <p>By adopting semantic HTML, you enhance your site's accessibility, improve SEO, and make the content easier to navigate.</p>
+         <footer>
+           <p>written by Joseph Ochego</p>
+           <p>Published on 2024-9-11</p>
+         </footer>
+       </section>
      </article>
    </main>
    <footer>
