--- a/0x02-tailwind-css/2-index.html
+++ b/0x02-tailwind-css/2-index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Complex Grid Layout</title>
-    <link rel="stylesheet" href="./output.css" />
+    <link rel="stylesheet" href="src/output.css" />
   </head>
   <body class="p-4">
     <header>
